# FastSEcretSCaner

./: .gitignore  .npmignore  .pre-commit-hooks.yaml  LICENSE  README.md  action.yml  demo.tape  package.json  test_secrets.env
npm/: package.json
npm/scanner/: Cargo.toml
npm/scanner/src/: context.rs  hook.rs  main.rs  scanner.rs  ui.rs
npm/scripts/: install.js
scanner/: Cargo.toml
scanner/src/: hook.rs  main.rs  report.rs  scanner.rs  ui.rs  verifier.rs
scripts/: install.js
