[package]
name = "fsesc"
version = "0.2.0"
edition = "2021"
authors = ["Antigravity <antigravity@google.com>"]
description = "Fast SEcret SCanner (fsesc): Professional-grade secret scanner with verification."

[dependencies]
# CLI Argument parsing
clap = { version = "4.5", features = ["derive"] }
# Fast regex matching
regex = "1.10"
# Work-stealing parallelism
rayon = "1.10"
# Fast directory traversal
ignore = "0.4"
# Memory mapping
memmap2 = "0.9"
# Error handling
anyhow = "1.0"
# Lazy initialization
once_cell = "1.19"
# Terminal colors and styling
colored = "2.1"
# Progress bars
indicatif = "0.17"
# Formatting tables for results
tabled = "0.15"
# Async runtime for verification
tokio = { version = "1.36", features = ["full"] }
# HTTP Client for verification
reqwest = { version = "0.11", features = ["json"] }
# Serializing/Deserializing (for JSON output)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async support for standard streams (tokio-aware progress bars)
console = "0.15"
